# neurlang

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  Makefile  README.md  build.rs  neurlang.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
benches/: compile_bench.rs
datagen/src/: main.rs
docker/: Dockerfile.b300  Dockerfile.gpu  Dockerfile.train  Dockerfile.train-cpu
docs/: COVERAGE_DESIGN.md  DESIGN-DECISIONS.md  GLOSSARY.md  PERFORMANCE.md  README.md  ROADMAP.md  TESTING.md
docs/architecture/: compilation.md  embeddings.md  execution.md  how-it-works.md  memory.md  multiarch.md  overview.md  rag-extensions.md  rag-intent-index.md  three-layers.md  two-tier-orchestration.md  verified-pipeline.md
docs/cli/: README.md  accuracy.md  agent.md  asm.md  bench.md  commands.md  compile.md  datagen.md  disasm.md  evaluate.md  examples.md  export_onnx.md  extension.md  generate.md  prompt.md  quickstart.md  run.md  spec.md  train.md
docs/codegen/: README.md
docs/compiler/: README.md
docs/concurrency/: README.md
docs/extensions/: bundled.md  creating.md
docs/interpreter/: README.md
docs/ir/: README.md  assembly.md  encoding.md  fat-pointers.md  opcodes.md
docs/modules/: README.md  buffer.md  compression.md  datetime.md  encoding.md  fs.md  regex.md  synonyms.md  tls.md  x509.md
docs/rag/: knowledge_base.md
docs/runtime/: README.md
docs/security/: README.md
docs/slot/: README.md  protocol-specs.md  slot-types.md  training-format.md  verification.md
docs/stdlib/: README.md
docs/stencil/: README.md
docs/training/: README.md  costs.md
examples/: README.md  test_pipeline.rs
examples/advanced/: api_gateway.nl  cqrs_handler.nl  etl_pipeline.nl  event_sourcing.nl  oauth2_flow.nl  saga_pattern.nl  webhook_processor.nl
examples/concurrency/: concurrent.nl
examples/crypto/: random.nl
examples/encoding/: base64_char.nl
examples/parsing/: config_parser.nl
examples/security/: capability_demo.nl
examples/system/: time_example.nl
lib/array/: array_eq.nl  array_max.nl  array_min.nl  binary_search.nl  bubble_sort.nl  copy.nl  count.nl  fill.nl  insertion_sort.nl  is_sorted.nl  linear_search.nl  lower_bound.nl  merge.nl  partition.nl  quicksort.nl  reverse.nl  rotate_left.nl  rotate_right.nl  sift_down.nl  sum.nl  unique.nl  upper_bound.nl
lib/bitwise/: bswap.nl  clear_lowest_bit.nl  clz.nl  ctz.nl  extract_bits.nl  highest_set_bit.nl  insert_bits.nl  is_power_of_2.nl  isolate_lowest_bit.nl  lowest_set_bit.nl  next_power_of_2.nl  parity.nl  popcount.nl  reverse_bits.nl  rotl.nl  rotr.nl
lib/collections/: hash_u64.nl  hashtable_contains.nl  hashtable_count.nl  hashtable_get.nl  hashtable_init.nl  hashtable_put.nl  queue_dequeue.nl  queue_enqueue.nl  queue_init.nl  queue_is_empty.nl  queue_peek.nl  queue_size.nl  stack_init.nl  stack_is_empty.nl  stack_peek.nl  stack_pop.nl  stack_push.nl  stack_size.nl
lib/float/: f64_from_bits.nl  f64_to_bits.nl  fabs.nl  fadd.nl  fceil.nl  fclamp.nl  fdiv.nl  ffloor.nl  fis_infinite.nl  fis_nan.nl  fmax.nl  fmin.nl  fmod.nl  fmul.nl  frecip.nl  fround.nl  fsign.nl  fsqrt.nl  fsub.nl  lerp.nl
lib/math/: abs_i64.nl  div_ceil.nl  factorial.nl  fibonacci.nl  gcd.nl  is_prime.nl  isqrt.nl  lcm.nl  max.nl  min.nl  power.nl  triangle_number.nl
lib/string/: atoi.nl  atoi_signed.nl  char_to_digit.nl  count_char.nl  ends_with.nl  htoi.nl  is_alnum.nl  is_alpha.nl  is_digit.nl  is_space.nl  itoa.nl  itoa_hex.nl  starts_with.nl  strcat.nl  strchr.nl  strcmp.nl  strcpy.nl  strlen.nl  strncpy.nl  strrchr.nl  strstr.nl  to_lower.nl  to_upper.nl  trim_left.nl  trim_right_len.nl
scripts/: provision-gpu-instance.sh  publish-release.sh  setup-b300.sh
specs/protocols/: dns.json  ftp.json  http.json  redis.json  smtp.json
src/: config.rs  lib.rs  main.rs
src/arch/: mod.rs
src/codegen/: c.rs  common.rs  go.rs  mod.rs  pseudocode.rs  rust.rs
src/compile/: engine.rs  mod.rs
src/compiler/: analyzer.rs  codegen.rs  mod.rs  parser.rs  test_gen.rs  verify.rs
src/extensions/: loader.rs  manifest.rs  mod.rs  registry.rs
src/ffi/: loader.rs  mod.rs  registry.rs  tests.rs  types.rs
src/inference/: agent.rs  embedder.rs  engine.rs  example_index.rs  formatter.rs  generators.rs  index.rs  intent_index.rs  lookup.rs  mod.rs  multihead.rs  orchestrator.rs  pipeline.rs  session.rs  tokenizer.rs  verify.rs
src/interp/: coverage.rs  dispatch.rs  mod.rs
src/ir/: assembler.rs  format.rs  intrinsics.rs  mod.rs  rag_resolver.rs
src/jit/: context.rs  executor.rs  handlers.rs  mod.rs
src/orchestration/: classifier.rs  collector.rs  mod.rs
src/runtime/: buffer_pool.rs  mod.rs
src/slot/: assembler.rs  cache.rs  filler.rs  intent.rs  mod.rs  parser.rs  router.rs  spec.rs  template.rs  training.rs  types.rs  validator.rs  verifier.rs
src/stencil/: concurrency.rs  io.rs  mod.rs  security.rs  table.rs
src/train/: backend.rs  dataset.rs  docker.rs  mod.rs  model.rs  trainer.rs
src/training/: mod.rs  profiles.rs  remote.rs  sync.rs
src/wrappers/: bridge.rs  buffer.rs  compression.rs  datetime.rs  encoding.rs  fs.rs  mod.rs  regex.rs  synonyms.rs  tls.rs  x509.rs
stdlib/: Cargo.toml
stdlib/src/: array.rs  bitwise.rs  collections.rs  float.rs  lib.rs  math.rs  string.rs
templates/: README.md  cli_application.skeleton  database_crud.skeleton  grpc_client.skeleton  grpc_server.skeleton  http_client.skeleton  http_server.skeleton  json_rpc_server.skeleton  mqtt_client.skeleton  rest_api.skeleton  tcp_server.skeleton  udp_server.skeleton  unix_socket_server.skeleton  websocket_server.skeleton  worker_service.skeleton
test/: cli_integration.rs  crypto_integration.rs  examples_integration.rs  generation_test_spec.md  integration_runner.rs  interpreter_exec.rs  opcode_tests.rs  wrappers_integration.rs
test/integration/: mod.rs  test_cases.rs  test_runner.rs
train/: CLAUDE.md  PROFILES.md  generate_training_data.py  requirements.txt
train/generators/: __init__.py  diverse_patterns.py  extension_patterns.py  http_patterns.py
(+156 files in other folders)
